Fix #3242 "Required radio buttons wrap"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap-override.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap-override.less
@@ -171,6 +171,7 @@ body.orbeon {
         label.radio, label.checkbox {
             display: inline-block;
             margin-bottom: 0;
+            margin-right: 0; // we set `margin-right` on `.xforms-selected`/`.xforms-deselected`
             vertical-align: middle;
         }
     }
